apps/laurens-dissertation/deployment-default-laurens-dissertation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: laurens-dissertation
  name: laurens-dissertation
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: laurens-dissertation
      managed-by: terraform
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: laurens-dissertation
        managed-by: terraform
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: PROXY_URL
          valueFrom:
            secretKeyRef:
              key: PROXY_URL
              name: laurens-dissertation-secrets
              optional: true
        image: registry.brmartin.co.uk/ben/laurens-dissertation
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: app
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: '2'
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data
          mountPropagation: None
          name: data
        - mountPath: /app/archive
          mountPropagation: HostToContainer
          name: archive
        - mountPath: /app/logs
          mountPropagation: None
          name: logs
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      imagePullSecrets:
      - name: gitlab-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: laurens-dissertation-data
      - name: archive
        persistentVolumeClaim:
          claimName: laurens-dissertation-archive-sw
      - emptyDir: {}
        name: logs
