apps/laurens-dissertation/service-default-laurens-dissertation.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: laurens-dissertation
  name: laurens-dissertation
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: laurens-dissertation
  sessionAffinity: None
  type: ClusterIP
