apps/laurens-dissertation/ingress-default-laurens-dissertation.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: laurens-dissertation
  name: laurens-dissertation
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: dissertation.sis.brmartin.co.uk
    http:
      paths:
      - backend:
          service:
            name: laurens-dissertation
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dissertation.sis.brmartin.co.uk
    secretName: wildcard-brmartin-tls
